fix bug: image width alignment & text input field box-sizing

--- a/src/pages/contactUs/ContactUsPage.module.css
+++ b/src/pages/contactUs/ContactUsPage.module.css
@@ -40,6 +40,7 @@
     justify-content: space-between;
     padding-bottom: 2rem;
     gap: 1rem;
+    width: 100%;
 }
 
 .label {
@@ -54,6 +55,7 @@
     border: 1px solid rgb(37, 37, 37);
     font-family: 'Raleway', serif;
     font-weight: 500;
+    box-sizing: border-box;
 }
 
 .inputTextArea {
@@ -61,6 +63,7 @@
     width: 100%;
     font-size: 1.5rem;
     border-radius: 5px;
+    box-sizing: border-box;
     font-family: 'Raleway', serif;
 
 }
