--- a/src/pages/product/ProductCreatePage.module.scss
+++ b/src/pages/product/ProductCreatePage.module.scss
@@ -117,6 +117,7 @@
     border: 1px solid rgb(37, 37, 37);
     font-family: 'Raleway', serif;
     font-weight:500;
+    box-sizing: border-box;
 }
 
 .inputTextArea {
@@ -125,6 +126,7 @@
     font-size: 1.5rem;
     border-radius: 5px;
     font-family: 'Raleway', serif;
+    box-sizing: border-box;
 }
 
 .imgBtn {
