--- a/src/pages/product/ProductDetailPage.module.css
+++ b/src/pages/product/ProductDetailPage.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     place-items: center;
+    padding-bottom: 3rem;
 }
 .container {
     display: flex;
@@ -18,11 +19,17 @@
 }
 .imageContainer {
     width: 100%;
+    height:20rem;
+    display: flex;
+    place-content: center;
 }
 
 .image {
-    width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    width: auto; 
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .titleContainer {
